--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: #746b41;
+  text-decoration: underline;
 }
 a:hover {
-  color: #535bf2;
+  color: #746b41;
 }
 
 body {
@@ -28,6 +28,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* background: rgb(161, 171, 82);
+    background: linear-gradient(180deg, rgba(161, 171, 82, 1) 29%, rgba(116, 124, 60, 1) 51%, rgba(64, 52, 38, 1) 100%); */
+  background-image: url("../src/assets/test.jpg");
 }
 
 h1 {
@@ -46,15 +49,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
+
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -64,5 +61,12 @@ button:focus-visible {
   }
   button {
     background-color: #f9f9f9;
+  }
+} */
+
+
+.withHover{
+  &:hover {
+    background-color:#9C9F4F
   }
 }
