--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,10 @@ button {
   transition: border-color 0.25s;
 }
 
+li {
+  font-size: 16px;
+}
+
 
 /* @media (prefers-color-scheme: light) {
   :root {
