--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ a {
   color: #746b41;
   text-decoration: underline;
 }
+
 a:hover {
   color: #746b41;
 }
@@ -32,35 +33,37 @@ body {
 
 .back-top {
   background-image: url("../src/assets/smol-olca.jpg");
-    background-position: top;
-    background-size: cover;
-        width: 100%;
-          height: 100vh;
-          position: absolute;
-          left: 0;
-          top: 0;
-          z-index: -1;
-          box-shadow: #4C4230 0px 4px 16px 0px, #4C4230 0px 8px 16px -5px;
+  background-position: top;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  box-shadow: #4C4230 0px 4px 16px 0px, #4C4230 0px 8px 16px -5px;
 }
+
 .back {
-background-image: url("../src/assets/mapka.jpg");
+  background-image: url("../src/assets/mapka.jpg");
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
-    width: 100%;
-          height: 100vh;
-            position: fixed;
-      left: 0;
-      top: 0;
-      right:0;
-      z-index: -2;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  z-index: -2;
 
 }
 
 .hero-content {
   background-image: url("../src/assets/napis.png");
-      width: 100%;
-        height: 100vh;
+  width: 100%;
+  height: 100vh;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -99,8 +102,8 @@ li {
 } */
 
 
-.withHover{
+.withHover {
   &:hover {
-    background-color:#9C9F4F
+    background-color: #9C9F4F
   }
 }
