--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,6 @@ body {
   top: 0;
   right: 0;
   z-index: -2;
-
 }
 
 .hero-content {
@@ -64,6 +63,14 @@ body {
   width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
+
+  @media screen and (max-width: 768px) {
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    background-size: 900px;
+    margin-top: -80px;
+  }
 }
 
 h1 {
