--- a/src/index.css
+++ b/src/index.css
@@ -63,14 +63,19 @@ body {
   width: 100%;
   height: 100vh;
   background-repeat: no-repeat;
+  background-position: center;
+  margin-top: -80px;
 
   @media screen and (max-width: 768px) {
     background-repeat: no-repeat;
-    background-position-x: center;
-    background-position-y: center;
-    background-size: 450px;
+    background-position: center;
+    background-size: 600px;
     margin-top: -80px;
   }
+
+  @media screen and (max-width: 375px) {
+      background-size: 450px;
+    }
 }
 
 h1 {
