--- a/src/App.css
+++ b/src/App.css
@@ -68,8 +68,9 @@
 @media (max-width: 768px) {
   .photo-container {
     width: 100%;
-    height: 200px;
+    height: 312px;
     margin-top: 16px !important;
+    flex: auto;
   }
 }
 
